[project]
name = "repot"
version = "0.1.0"
description = "A simple CLI to send text to a Python REPL in a tmux pane"
readme = "README.md"
requires-python = ">=3.12"  # extend to lower versions?
dependencies = [
    "ipykernel>=6.29.5",  # TODO: drop
    "ipython>=9.2.0",  # TODO: drop
    "typing-extensions>=4.0.0",
]

[project.scripts]
repot = "repot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["repot"]
