[project]
name = "replink"
version = "0.1.0"
description = "A simple CLI to send text to a Python REPL in a tmux pane"
readme = "README.md"
requires-python = ">=3.12"  # extend to lower versions?
dependencies = []

[project.scripts]
replink = "replink.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["replink"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
